--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "firebase": "^11.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
